@@ -42,8 +42,6 @@ for my $test (qw/slurp bb tempname link fh io bad;query=string%%/) {
 }
 
 {
-    skip 1, "- hook API not yet implemented";
-    last;
     my $value = 'DataUpload' x 100;
     my $result = UPLOAD_BODY("$location?test=hook", content => $value); 
     ok t_cmp($result, $value, "type");
